apps/joplin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joplin
  namespace: joplin
  labels:
    app: joplin
spec:
  type: ClusterIP
  ports:
    - port: 22300
      targetPort: 22300
      protocol: TCP
  selector:
    app: joplin
