apps/joplin/joplin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joplin-server
  namespace: apps
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: joplin
  template:
    metadata:
      labels:
        app: joplin
    spec:
      containers:
      - name: app
        image: joplin/server:3.5.2
        ports:
        - containerPort: 22300
        livenessProbe:
          tcpSocket:
            port: 22300
          initialDelaySeconds: 60
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 22300
          initialDelaySeconds: 30
          periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: joplin
  namespace: apps
spec:
  ports:
  - port: 80
    targetPort: 22300
  selector:
    app: joplin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joplin
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - joplin.cusin-server.duckdns.org
    secretName: joplin-tls
  rules:
  - host: joplin.cusin-server.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: joplin
            port:
              number: 80
